--- a/static/src/pages/SignIn/SignIn.scss
+++ b/static/src/pages/SignIn/SignIn.scss
@@ -4,6 +4,7 @@ $font: "Montserrat";
   display: flex;
   flex-direction: column;
   width: 100vw;
+  height: 100vh;
   align-items: center;
   justify-content: center;
   font-family: $font;
@@ -19,18 +20,34 @@ $font: "Montserrat";
     #signin_form {
       display: flex;
       flex-direction: column;
-      height: 400px;
-      //      border: 1px black solid;
       border-radius: 5px;
       width: 270px;
       justify-content: top;
       align-items: center;
       background-color: white;
 
-      form {
-        display: flex;
-        flex-direction: column;
+      #form_header {
+        width: 100%;
       }
+
+      #slider {
+        height: 185px;
+        transition: height .3s;
+
+        &.si {
+          height: 185px;
+        }
+
+        &.su {
+          height: 366px;
+        }
+
+        form {
+          display: flex;
+          flex-direction: column;
+        }
+      }
+
 
       h3 {
         font-size: 19px;
@@ -43,15 +60,16 @@ $font: "Montserrat";
         transition: 3s;
         height: 65px;
 
-        .form_header {
-
+        span.form_header {
           font-size: 19px;
           transition: .3s;
+          text-decoration: underline;
 
           &.active {
             font-size: 35px;
             cursor: default;
             color: black;
+            text-decoration: none;
           }
         }
       }
