--- a/static/src/pages/SignIn/SignIn.scss
+++ b/static/src/pages/SignIn/SignIn.scss
@@ -16,6 +16,38 @@ $font: "Montserrat";
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+
+    div#form_header {
+      width: 266px;
+      padding-bottom: 0px;
+      margin-bottom: 0px;
+
+      h3 {
+        font-size: 19px;
+        width: 100%;
+        margin: 0;
+        line-height: 28px;
+        color: grey;
+        cursor: pointer;
+        height: 65px;
+
+        span.form_header {
+          font-size: 19px;
+          transition: .3s;
+          text-decoration: underline;
+
+          &.active {
+            font-size: 35px;
+            cursor: default;
+            color: black;
+            text-decoration: none;
+          }
+        }
+      }
+
+    }
+
 
     #signin_form {
       display: flex;
@@ -49,30 +81,6 @@ $font: "Montserrat";
       }
 
 
-      h3 {
-        font-size: 19px;
-        width: 100%;
-        margin: 0;
-        margin-bottom: 20px;
-        line-height: 28px;
-        color: grey;
-        cursor: pointer;
-        transition: 3s;
-        height: 65px;
-
-        span.form_header {
-          font-size: 19px;
-          transition: .3s;
-          text-decoration: underline;
-
-          &.active {
-            font-size: 35px;
-            cursor: default;
-            color: black;
-            text-decoration: none;
-          }
-        }
-      }
 
       label {
         padding-top: 10px;
