added global 'logged in' context and began work on search bar

--- a/static/src/components/NavBar/NavBar.scss
+++ b/static/src/components/NavBar/NavBar.scss
@@ -49,6 +49,17 @@ $font: "Montserrat";
       }
     }
 
+    #search {
+      #search_bar_input {
+        height: 32px;
+        border-radius: 100px;
+        padding-left: 14px;
+        font-family: "Montserrat";
+        width: 360px;
+        border: 1px solid teal;
+      }
+    }
+
   }
 
 }
