--- a/static/src/components/NavBar/NavBar.scss
+++ b/static/src/components/NavBar/NavBar.scss
@@ -50,16 +50,42 @@ $font: "Montserrat";
     }
 
     #search {
-      #search_bar_input {
-        height: 32px;
-        border-radius: 100px;
-        padding-left: 14px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+
+
+      #search_bar_button {
+        display: flex;
+        align-items: center;
+        height: 40px;
+        text-align: left;
+        padding-left: 12px;
         font-family: "Montserrat";
-        width: 360px;
+        width: 60%;
+        border-radius: 100px;
         border: 1px solid teal;
+        cursor: pointer;
+
+        .mag_glass {
+          color: #3a3a3a;
+          padding-right: 12px;
+        }
+
+        #search_text {
+          color: #3a3a3a;
+          font-weight: 600;
+          font-size: 16px;
+        }
       }
     }
 
+    #nav_buttons {
+      width: 124px;
+    }
+
   }
+
 
 }
