further progress on search functionality

--- a/static/src/components/NavBar/NavBar.scss
+++ b/static/src/components/NavBar/NavBar.scss
@@ -82,7 +82,9 @@ $font: "Montserrat";
     }
 
     #nav_buttons {
-      width: 124px;
+      width: fit-content;
+      min-width: 112px;
+
     }
 
   }
