--- a/static/src/components/NavBar/Search/Search.scss
+++ b/static/src/components/NavBar/Search/Search.scss
@@ -16,10 +16,9 @@ $logo_color: #87ceebff;
   background-color: #f1f1f1;
   border-top-right-radius: 21px;
   border-top-left-radius: 21px;
-  border-bottom-right-radius: 7px;
-  border-bottom-left-radius: 7px;
+  border-bottom-right-radius: 21px;
+  border-bottom-left-radius: 21px;
   box-shadow: 0px 2px 10px black;
-  padding-bottom: 15px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -69,6 +68,17 @@ $logo_color: #87ceebff;
       color: #4f4f4f;
     }
 
+  }
+
+  #suggestions {
+    width: 100%;
+    padding-left: 30px;
+
+    ul {
+      list-style: none;
+      padding-left: 0;
+      width: 100%;
+    }
   }
 
   #return_picker_outer_div {
