added date selection after destination selection

--- a/static/src/components/NavBar/Search/Search.scss
+++ b/static/src/components/NavBar/Search/Search.scss
@@ -49,13 +49,7 @@ $logo_color: #87ceebff;
       max-width: 622px;
       box-sizing: border-box;
 
-      @media screen and (min-width: 480px) {
-        width: 40vw;
-      }
 
-      @media screen and (max-width: 500px) {
-        width: 80vw;
-      }
 
       &::placeholder {
         color: #3a3a3a;
@@ -64,6 +58,7 @@ $logo_color: #87ceebff;
 
     #exit_search {
       all: unset;
+      cursor: pointer;
       margin-top: 3px;
       color: #4f4f4f;
     }
@@ -72,78 +67,83 @@ $logo_color: #87ceebff;
 
   #suggestions {
     width: 100%;
-    padding-left: 30px;
+    padding-left: 10px;
+    padding-right: 10px;
+    box-sizing: border-box;
 
     ul {
       list-style: none;
       padding-left: 0;
       width: 100%;
+
+      li {
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        width: 100%;
+        overflow: hidden;
+        cursor: pointer;
+        box-sizing: border-box;
+        border-radius: 20px;
+        padding: 5px 15px;
+        margin-bottom: 5px;
+
+        &:hover {
+          background-color: #e0e0e0;
+        }
+
+
+      }
+
     }
   }
 
-  #return_picker_outer_div {
-    display: flex;
-    width: 71%;
-    justify-content: left;
-    margin: 10px 0;
-
-    @media screen and (max-width: 900px) {
-      flex-direction: row;
-      width: 240px;
-    }
-
-    input {
-      background-color: white;
-      width: 12px;
-    }
-  }
-
-
-  #date_outer_div {
-    width: 100%;
+  #date_picker {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
 
-
-    //desktop
-    @media screen and (min-width: 900px) {
-      flex-direction: row;
-      width: 80%;
-      align-items: start;
-    }
-
-    #dates_as_text {
+    #date_top {
       display: flex;
-      margin-bottom: 20px;
-      min-height: fit-content;
-      width: fit-content;
-      min-width: 240px;
-      align-items: space-between;
       justify-content: space-between;
+      width: 100%;
+      margin: 14px 0;
 
-      @media screen and (min-width: 900px) {
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-between;
-        min-height: 154px;
-        min-width: fit-content;
+      .return_single_buttons {
+        all: unset;
+        width: 100%;
+        text-align: center;
+        padding: 13px 0px;
+        cursor: pointer;
+        background-color: #676767;
+        color: white;
+        transition: background-color .2s;
+
+
+        &.left {
+          border-top-left-radius: 15px;
+          border-bottom-left-radius: 15px;
+        }
+
+        &.right {
+          border-top-right-radius: 15px;
+          border-bottom-right-radius: 15px;
+        }
+
+        &:hover {
+          background-color: #87ceebff;
+        }
+
+        &.active {
+          background-color: #87ceebff;
+          font-weight: 600;
+        }
       }
 
 
-      #to_from {
-        font-weight: 700;
-        word-spacing: 0px;
-        padding-bottom: 0;
-      }
 
-      p {
-        min-width: 90px;
-        padding-bottom: 0;
-
-      }
     }
 
+    .next_date {
+      margin: 10px 0;
+    }
   }
 }
