--- a/static/src/pages/SearchResults/components/FlightCard.scss
+++ b/static/src/pages/SearchResults/components/FlightCard.scss
@@ -1,19 +1,20 @@
 .flight-card {
+  margin-top: 7px;
   display: flex;
   align-items: flex-start;
   gap: 1rem;
   background-color: white;
   padding: 1rem;
   border-radius: 1rem;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+  box-shadow: 1px 4px 8px rgba(0, 0, 0, 0.05);
   max-width: 800px;
   font-family: system-ui, sans-serif;
 
   .airline-logo {
-    width: 24px;
-    height: 24px;
+    width: 44px;
     object-fit: contain;
     margin-top: 4px;
+    top: auto
   }
 
   .flight-details {
