--- a/static/src/pages/SearchResults/SearchResults.scss
+++ b/static/src/pages/SearchResults/SearchResults.scss
@@ -9,12 +9,13 @@
   .ap_name {
     display: flex;
     width: 800px;
-    font-size: 30px;
     color: #000;
   }
 
   .result_list {
     margin-top: 40px;
+    display: flex;
+    gap: 1rem
   }
 
 }
